# Ebi_arithmetic

./: Cargo.toml  README.md
src/: choose_randomly.rs  constant_fraction.rs  ebi_log_polynomial.rs  ebi_matrix.rs  ebi_number.rs  ebi_number_bigfraction.rs  ebi_number_bigint.rs  ebi_number_biguint.rs  ebi_number_floats.rs  ebi_number_integers.rs  exact.rs  exporter.rs  fraction.rs  fraction_enum.rs  fraction_exact.rs  fraction_f64.rs  fraction_matrix.rs  fraction_matrix_enum.rs  fraction_matrix_exact.rs  fraction_matrix_f64.rs  inversion.rs  lib.rs  log.rs  loose_fraction.rs  mul.rs  num.rs  parsing.rs  traits.rs  traits_external_implemenations.rs
src/fraction/: approximate.rs  choose_randomly.rs  exact.rs  fraction.rs  fraction_enum.rs  fraction_exact.rs  fraction_f64.rs  one.rs  one_minus.rs  random.rs  recip.rs  round.rs  signed.rs  sqrt.rs  to_native.rs  zero.rs
src/fraction_raw/: div_assign.rs  fraction_raw.rs  getters.rs  mul_assign.rs  neg.rs  one.rs  recip.rs  sub_assign.rs  zero.rs
src/log_polynomial/: add.rs  approximate.rs  div.rs  exact.rs  from.rs  log.rs  log_polynomial.rs  log_polynomial_enum.rs  log_polynomial_exact.rs  log_polynomial_f64.rs  mul.rs  neg.rs  one.rs  sub.rs  zero.rs
src/matrix/: ebi_matrix.rs  exact.rs  fraction_matrix.rs  fraction_matrix_enum.rs  fraction_matrix_exact.rs  fraction_matrix_f64.rs  gauss_jordan.rs  identity_minus.rs  inversion.rs  loose_fraction.rs  mul.rs
