[package]
name = "ebi_arithmetic"
version = "0.2.3"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["command-line-utilities"]
description = "Exact arithmetic for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/ebi_arithmetic"
readme = "README.md"

[lib]
name = "ebi_arithmetic"
crate-type = ["cdylib", "lib"]

[features]
default = [ ]
exactarithmetic = []
approximatearithmetic = []

[dependencies]
anyhow = "1.0.99"
itertools = "0.14.0"
rand = "0.9.2"
malachite = { version="0.6.1", features = ["random"] }

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1