[package]
name = "ebi_arithmetic"
version = "0.3.13"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = []
categories = ["command-line-utilities"]
description = "Exact arithmetic for Ebi - a stochastic process mining utility"
homepage = "https://ebitools.org"
repository = "https://github.com/BPM-Research-Group/ebi_arithmetic"
readme = "README.md"

[lib]
name = "ebi_arithmetic"
crate-type = ["cdylib", "lib"]

[features]
default = [ ]
exactarithmetic = []
approximatearithmetic = []

[dependencies]
anyhow = "1.0.102"
itertools = "0.15.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
malachite = { version="0.9.2", features = ["random"] }
serial_test = "3.5.0"
intmap = "3.1.3"
fnv = "1.0.7"
prime_factorization = "1.0.5"

[profile.release]
debug = false
strip = true
panic = 'abort'
opt-level = 3
lto = true
codegen-units = 1